<resources>
    <string name="app_name">Easy Go</string>
    <string name="title_activity_add_trip">AddTrip</string>
    <string name="title_activity_trip">TripActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>

    <string name="menu_trip">Trip</string>
    <string name="menu_flight">Flight</string>
    <string name="menu_user">User</string>

    <string name="menu_admin">Admin Control Panel</string>

    <string name="menu_reservation">Reservation</string>
    <string name="menu_cancelRes">Cancel Reservation</string>
    <string name="menu_mangeTrip">Manage Trip</string>
    <string name="menu_mangeFlight">Manage Flight</string>
    <string name="menu_mangeData">Basic Data</string>

    <string name="addImg"> <u>Add Image</u> </string>

</resources>
